Fix issue with dark mode support

--- a/src/options/style.css
+++ b/src/options/style.css
@@ -1,3 +1,4 @@
 body {
-    font-family: "Arial";
+    font-family: 'Arial';
+    margin: 0;
 }
